--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@700&display=swap');
 body {
   margin: 0;
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+}
+.logo-name{
+  font-family: 'Corinthia', cursive;
+  font-weight: 900;
+  -webkit-font-feature-settings: "liga","clig off";
+  font-feature-settings: "liga","clig off";
+  font-variant-ligatures: no-common-ligatures;
+  -webkit-font-variant-ligatures: no-common-ligatures;
+  padding: 0 10px;
+}
+.logo{
+  display: block;
+  flex: none;
+  float: left;
+  font-size: 2em;
+  text-decoration: none;
+  margin-top: 10px;
+  line-height: normal;
+  color: #cd5ef8 ;
 }
